--- a/DiGit/ResourceDictionary/CommandsListResourceDictionary.xaml
+++ b/DiGit/ResourceDictionary/CommandsListResourceDictionary.xaml
@@ -12,13 +12,27 @@
     </Style>
     
     <Style x:Key="CommandTextBlockListItemStyle" TargetType="{x:Type TextBlock}">
-        <Setter Property="Text" Value="{Binding DisplayName}"/>
+        <Setter Property="Text" Value="{Binding header}"/>
         <Setter Property="TextAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Stretch"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
 
-    <DataTemplate x:Key="CommandListBoxItemTemplate" DataType="model:MenuCommand">
+    <DataTemplate x:Key="CommandListBoxItemTemplate" DataType="model:DiGitConfigCommand">
+        <Border x:Name="border" Style="{DynamicResource CommandListItemBorderStyle}">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                    <GradientStop Color="#BCD6F3" Offset="0" />
+                    <GradientStop Color="#D9E9FB" Offset="1" />
+                </LinearGradientBrush>
+            </Border.Background>
+
+            <TextBlock Style="{DynamicResource CommandTextBlockListItemStyle}" FontFamily="Segoe UI"/>
+        </Border>
+    </DataTemplate>
+
+
+    <!--<DataTemplate x:Key="CommandListBoxItemTemplate" DataType="model:MenuCommand">
         <Border x:Name="border" Style="{DynamicResource CommandListItemBorderStyle}">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
@@ -42,7 +56,7 @@
 
             <TextBlock Style="{DynamicResource CommandTextBlockListItemStyle}"/>
         </Border>
-    </DataTemplate>
+    </DataTemplate>-->
     
     <Style x:Key="CommandListBoxItemStyle" TargetType="{x:Type ListBoxItem}">
         <Style.Resources>
