--- a/DiGit/ResourceDictionary/CommandsListResourceDictionary.xaml
+++ b/DiGit/ResourceDictionary/CommandsListResourceDictionary.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:model="clr-namespace:DiGit.Model">
+                    xmlns:model="clr-namespace:DiGit.Model"
+                    xmlns:configuration="clr-namespace:DiGit.Configuration">
 
     <Style x:Key="CommandListItemBorderStyle" TargetType="{x:Type Border}">
         <Setter Property="BorderThickness" Value="0"/>
@@ -18,7 +19,7 @@
         <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
 
-    <DataTemplate x:Key="CommandListBoxItemTemplate" DataType="model:DiGitConfigCommand">
+    <DataTemplate x:Key="CommandListBoxItemTemplate" DataType="configuration:DiGitConfigCommand">
         <Border x:Name="border" Style="{DynamicResource CommandListItemBorderStyle}">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
