--- a/DiGit/View/UpdateView.xaml
+++ b/DiGit/View/UpdateView.xaml
@@ -4,7 +4,7 @@
                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
                   xmlns:mui="http://firstfloorsoftware.com/ModernUI"
-                  xmlns:updates="clr-namespace:DiGit.Updates"
+                  xmlns:updates="clr-namespace:DiGit.Versioning"
                   mc:Ignorable="d" 
                   d:DesignHeight="300" d:DesignWidth="300"
                   Title="DiGit Update"
