--- a/DiGit/ResourceDictionary/BubbleResourceDictionary.xaml
+++ b/DiGit/ResourceDictionary/BubbleResourceDictionary.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:model="clr-namespace:DiGit.Model">
 
     <Style x:Key="BubbleBorderStyle" TargetType="{x:Type Border}">
         <Setter Property="Background">
@@ -459,5 +460,23 @@
     <ControlTemplate x:Key="MenuItemBubbleVisualSettingsControlTemplate" TargetType="{x:Type MenuItem}">
         <GroupBox Margin="20,0" HorizontalAlignment="Left" Template="{DynamicResource GroupBoxBubbleVisualSettingsControlTemplate}"/>
     </ControlTemplate>
+
+    <!--<HierarchicalDataTemplate DataType="{x:Type model:PathClass}">
+        <HierarchicalDataTemplate.Resources>
+            <Style TargetType="{x:Type MenuItem}">
+                <Setter Property="Command" Value="{Binding RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}, Path=DataContext.OpenFolderCommand }"></Setter>
+                <Setter Property="CommandParameter" Value="{Binding FullPath}"/>
+            </Style>
+        </HierarchicalDataTemplate.Resources>
+        <ContentPresenter Content="{Binding DisplayPath}"/>
+    </HierarchicalDataTemplate>-->
+
+    <!--<DataTemplate DataType="{x:Type model:PathClass}">
+        <MenuItem Header="adsf" 
+                  Command="{Binding RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}, Path=DataContext.OpenFolderCommand }" 
+                  CommandParameter="{Binding FullPath}"></MenuItem>
+    </DataTemplate>-->
+
+    
 
 </ResourceDictionary>
