Add favorite folders + clipboard listener in Right Click context menu. Not cleaned!

--- a/DiGit/ResourceDictionary/DefaultControlsResourceDictionary.xaml
+++ b/DiGit/ResourceDictionary/DefaultControlsResourceDictionary.xaml
@@ -10,6 +10,7 @@
         <ResourceDictionary Source="Controls/ListBox.xaml"/>
         <ResourceDictionary Source="Controls/Window.xaml"/>
         <ResourceDictionary Source="Controls/Checkbox.xaml"/>
+        <ResourceDictionary Source="Controls/MenuItem_Test.xaml"/>
         <!--<ResourceDictionary Source="CommandsListMenu.xaml"/>-->
     </ResourceDictionary.MergedDictionaries>
 
